@@ -1,3 +1,9 @@
+2011-09-07  Iain Sandoe  <iains@gcc.gnu.org>
+
+	* gcc-interface/Makefile.in (darwin): Provide powerpc64 system 
+	implementation.
+	* system-darwin-ppc64.ads: New file.
+
 2011-09-06  Iain Sandoe  <iains@gcc.gnu.org>
 
 	* gcc-interface/Makefile.in (gnatlib-shared-darwin): Remove
